Unit tests + code formatting.